minor alignment fixes

--- a/sass/hyde.scss
+++ b/sass/hyde.scss
@@ -128,7 +128,8 @@ a.sidebar-nav-item:focus {
         padding-right: m#{a}x(1rem, env(safe-area-inset-right));
     }
   }
-}}
+}
+}
 
 
 /* Container
@@ -156,20 +157,23 @@ a.sidebar-nav-item:focus {
 
 
 @media (min-width: 48em) {
+@media (min-height: 40em){
   .content {
     max-width: 38rem;
     margin-left: 20rem;
     margin-right: 2rem;
   }
 }
+}
 
 @media (min-width: 64em) {
+@media (min-height: 40em){
   .content {
     margin-left: 22rem;
     margin-right: 4rem;
   }
 }
-
+}
 
 /*
  * Reverse layout
@@ -178,6 +182,7 @@ a.sidebar-nav-item:focus {
  */
 
 @media (min-width: 48em) {
+@media (min-height: 40em){
   .layout-reverse .sidebar {
     left: auto;
     right: 0;
@@ -187,12 +192,14 @@ a.sidebar-nav-item:focus {
     margin-right: 20rem;
   }
 }
+}
 
 @media (min-width: 64em) {
+@media (min-height: 40em){
   .layout-reverse .content {
     margin-left: 4rem;
     margin-right: 22rem;
   }
 }
-
+}
 
